fix mobile layout issue

--- a/styles.less
+++ b/styles.less
@@ -146,6 +146,11 @@ a {
   .repos-container {
     margin-left: 0;
 
-    .repo-list {max-height: none;}
+    .repo-list {
+      max-height: none;
+      overflow-y: visible;
+    }
+
+    ul {width: 100%;}
   }
 }
